k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: specterdefence-dev
  labels:
    app.kubernetes.io/name: specterdefence
    app.kubernetes.io/part-of: specterdefence
    environment: development
